Add native testing support (pcap/C)
This patchs adds native testing support. It runs testing cases with
native performance (pcap) avoiding binding overhead.

* src/Makefile
* src/pf_test_native.c. native support using pcap in C lang
* src/pf_test_native.lua. string handling and ts driving

$ make
gcc -o pf_test_native pf_test_native.c -lpcap
$ make test_native
luajit -l pf_test_native -e 'pf_test_native.run()'

[*] Running test plan: ts/tests/0001_plan.ts

enabled tests: 11 of 12

[...]
Test case running ...
id: 6
description: udp dst port test
filter: udp dst port 2087
pcap_file: ws/tftp_wrq.pcap
expected_result: 49
enabled: true
tc id 6 PASS
tc id 6 AVG ET  0.000026
[...]

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,19 @@
-PATH := ../deps/luajit/usr/local/bin:$(PATH)
+PATH := .:../deps/luajit/usr/local/bin:$(PATH)
 
 all:
+	gcc -o pf_test_native pf_test_native.c -lpcap
+
 clean:
+	rm -r -f pf_test_native
 
 check:
 	luajit -l pf -e 'pf.selftest()'
 
 test:
 	luajit -l pf_test -e 'pf_test.run()'
+
+test_native:
+	luajit -l pf_test_native -e 'pf_test_native.run()'
 
 trace:
 	luajit -jdump -l pf_test -e 'pf_test.run()'
