Add new target test_jit_off
Add a new target test_jit_off in order to support test cases running
without JIT support in luajit.

* src/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,9 @@ check:
 test:
 	luajit -l pf_test -e 'pf_test.run()'
 
+test_jit_off:
+	luajit -joff -l pf_test -e 'pf_test.run()'
+
 test_native:
 	luajit -l pf_test_native -e 'pf_test_native.run()'
 
