--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ clean:
 check:
 	luajit -l pf.buffer -e 'pf.buffer.selftest()'
 	luajit -l pf.libpcap -e 'pf.libpcap.selftest()'
+	luajit -l pf.bpf -e 'pf.bpf.selftest()'
 	luajit -l pf -e 'pf.selftest()'
 
 test:
