Add pf.types module
* src/pf/types.lua: New file, for FFI type declarations used by multiple
  modules.

* src/pf/savefile.lua:
* src/pf/libpcap.lua: Adapt.

* src/Makefile: Add new file.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ clean:
 
 check:
 	luajit -l pf.buffer -e 'pf.buffer.selftest()'
+	luajit -l pf.types -e 'pf.types.selftest()'
 	luajit -l pf.libpcap -e 'pf.libpcap.selftest()'
 	luajit -l pf.bpf -e 'pf.bpf.selftest()'
 	luajit -l pf.lang -e 'pf.lang.selftest()'
