--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,7 @@ clean:
 
 check:
 	luajit -l pf.types -e 'pf.types.selftest()'
+	luajit -l pf.utils -e 'pf.utils.selftest()'
 	luajit -l pf.libpcap -e 'pf.libpcap.selftest()'
 	luajit -l pf.bpf -e 'pf.bpf.selftest()'
 	luajit -l pf.parse -e 'pf.parse.selftest()'
