--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
 PATH := ../deps/luajit/usr/local/bin:$(PATH)
 
-EXAMPLES = tcp-port-80.md
+EXAMPLES = tcp-port-80.md icmp-or-tcp-or-udp.md
 
 all: $(EXAMPLES)
 
@@ -8,5 +8,7 @@ maintainer-clean:
 	rm -f $(EXAMPLES)
 
 tcp-port-80.md:
-	../tools/dump-markdown "tcp port 80" > $@.tmp
-	mv $@.tmp $@
+	../tools/dump-markdown "tcp port 80" > $@.tmp && mv $@.tmp $@
+
+icmp-or-tcp-or-udp.md:
+	../tools/dump-markdown "icmp or tcp or udp" > $@.tmp && mv $@.tmp $@
