Optimize <= / >= for non-strict orderings
* doc/Makefile:
* doc/portrange-0-6000.md: New example.

* src/pf/optimize.lua: Optimize <= and >= for ranges that are ordered,
  but not strictly so.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
 PATH := ../deps/luajit/usr/local/bin:$(PATH)
 
-EXAMPLES = tcp-port-80.md icmp-or-tcp-or-udp.md
+EXAMPLES = tcp-port-80.md icmp-or-tcp-or-udp.md portrange-0-6000.md
 
 all: $(EXAMPLES)
 
@@ -12,3 +12,6 @@ tcp-port-80.md:
 
 icmp-or-tcp-or-udp.md:
 	../tools/dump-markdown "icmp or tcp or udp" > $@.tmp && mv $@.tmp $@
+
+portrange-0-6000.md:
+	../tools/dump-markdown "portrange 0-6000" > $@.tmp && mv $@.tmp $@
