Better length hoisting; fix bare "host" operator
* doc/Makefile: Remake .md files when pflua changes.

* doc/host-127.0.0.1.md: Regenerated, now with better length hoisting.

* src/pf/expand.lua (expand_host): Fix; should be "host src foo OR host
  dst foo", not AND.

* src/pf/optimize.lua (lhoist): Separately track the minimum packet
  length for an expression to evaluate as true or false.  This allows
  a more precise length computation.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,19 +6,27 @@ EXAMPLES = \
 	portrange-0-6000.md \
 	host-127.0.0.1.md
 
+PFLUA = \
+	../src/pf.lua \
+	../src/pf/bpf.lua \
+	../src/pf/parse.lua \
+	../src/pf/expand.lua \
+	../src/pf/optimize.lua \
+	../src/pf/codegen.lua
+
 all: $(EXAMPLES)
 
 maintainer-clean:
 	rm -f $(EXAMPLES)
 
-tcp-port-80.md:
+tcp-port-80.md: $(PFLUA)
 	../tools/dump-markdown "tcp port 80" > $@.tmp && mv $@.tmp $@
 
-icmp-or-tcp-or-udp.md:
+icmp-or-tcp-or-udp.md: $(PFLUA)
 	../tools/dump-markdown "icmp or tcp or udp" > $@.tmp && mv $@.tmp $@
 
-portrange-0-6000.md:
+portrange-0-6000.md: $(PFLUA)
 	../tools/dump-markdown "portrange 0-6000" > $@.tmp && mv $@.tmp $@
 
-host-127.0.0.1.md:
+host-127.0.0.1.md: $(PFLUA)
 	../tools/dump-markdown "host 127.0.0.1" > $@.tmp && mv $@.tmp $@
