Travis-ci: Added dependency on libpcap-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ env: LUA="luajit"
 
 before_install: git submodule update --init
 
+install: sudo apt-get install libpcap-dev
+
 script: make && make check
