--- a/doc/Makefile
+++ b/doc/Makefile
@@ -27,7 +27,9 @@ EXAMPLES = \
 	ip6-multicast.md \
 	ip6-proto-ah.md \
 	iso-proto-clnp.md \
-	proto-sctp.md
+	proto-sctp.md \
+	decnet-src-10.15.md \
+	decnet-host-10.15.md
 
 PFLUA = \
 	../src/pf.lua \
@@ -123,3 +125,9 @@ iso-proto-clnp.md:
 
 proto-sctp.md:
 	../tools/dump-markdown "proto \sctp" > $@.tmp && mv $@.tmp $@
+
+decnet-src-10.15.md:
+	../tools/dump-markdown "decnet src 10.15" > $@.tmp && mv $@.tmp $@
+
+decnet-host-10.15.md:
+	../tools/dump-markdown "decnet host 10.15" > $@.tmp && mv $@.tmp $@
