Add codegen2 from SSA
* src/pf/codegen2.lua: New file.
* src/Makefile: Add to build.

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,6 +15,7 @@ check:
 	luajit -l pf.optimize -e 'pf.optimize.selftest()'
 	luajit -l pf.codegen -e 'pf.codegen.selftest()'
 	luajit -l pf.ssa -e 'pf.ssa.selftest()'
+	luajit -l pf.codegen2 -e 'pf.codegen2.selftest()'
 	luajit -l pf -e 'pf.selftest()'
 
 test:
