Replace old codegen backend with new ANF -> SSA backend
* README.md: Update.
* src/pf/backend.lua: Rename from codegen2.lua.
* src/pf/codegen.lua: Remove old backend.
* src/pf/ssa.lua: Add test printouts.
* src/pf.lua: Adapt for new backend.
* src/Makefile: Reorder and adapt.
* doc/Makefile: Update for new backend files.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -43,7 +43,9 @@ PFLUA = \
 	../src/pf/parse.lua \
 	../src/pf/expand.lua \
 	../src/pf/optimize.lua \
-	../src/pf/codegen.lua
+	../src/pf/anf.lua \
+	../src/pf/ssa.lua \
+	../src/pf/backend.lua
 
 all: $(EXAMPLES)
 
