--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,6 @@ all:
 clean:
 
 check:
-	luajit -l pf.anf -e 'pf.anf.selftest()'
 	luajit -l pf.types -e 'pf.types.selftest()'
 	luajit -l pf.utils -e 'pf.utils.selftest()'
 	luajit -l pf.libpcap -e 'pf.libpcap.selftest()'
@@ -13,9 +12,9 @@ check:
 	luajit -l pf.parse -e 'pf.parse.selftest()'
 	luajit -l pf.expand -e 'pf.expand.selftest()'
 	luajit -l pf.optimize -e 'pf.optimize.selftest()'
-	luajit -l pf.codegen -e 'pf.codegen.selftest()'
+	luajit -l pf.anf -e 'pf.anf.selftest()'
 	luajit -l pf.ssa -e 'pf.ssa.selftest()'
-	luajit -l pf.codegen2 -e 'pf.codegen2.selftest()'
+	luajit -l pf.backend -e 'pf.backend.selftest()'
 	luajit -l pf -e 'pf.selftest()'
 
 test:
