Move pcap savefiles to tests/data
* tests/data/COPYRIGHT: Update for merging directories.

* tests/data/empty.pcap:
* tests/data/telnet-cooked.pcap:
* tests/data/tftp_wrq.pcap:
* tests/data/v4.pcap:
* tests/data/v6.pcap: Move here.

* tools/Makefile:
* README.md:
* src/pf.lua:
* tools/helpers/pflua_asm.lua: Update paths.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -6,6 +6,6 @@ clean:
 	rm -f tmp.pcap
 
 check:
-	./pflua-filter ../tests/pcaps/ws/v4.pcap ./tmp.pcap "ip"
-	cmp ../tests/pcaps/ws/v4.pcap tmp.pcap
+	./pflua-filter ../tests/data/v4.pcap ./tmp.pcap "ip"
+	cmp ../tests/data/v4.pcap tmp.pcap
 	rm tmp.pcap
