Move property tests to a subdirectory
* tests/pfquickcheck/properties/fail.lua:
* tests/pfquickcheck/properties/opt_eq_unopt.lua:
* tests/pfquickcheck/properties/pflua_math_eq_libpcap_math.lua:
* tests/pfquickcheck/properties/trivial.lua: Move to a subdirectory.

* tests/pfquickcheck/Makefile:
* tests/pfquickcheck/README.md: Adapt.

--- a/tests/pfquickcheck/Makefile
+++ b/tests/pfquickcheck/Makefile
@@ -1,14 +1,16 @@
 check: quickcheck
 
 quickcheck: get_savefile
-	./pflua-quickcheck prop_opt_eq_unopt savefiles/wingolog.org.pcap test-filters
-	./pflua-quickcheck prop_opt_eq_unopt savefiles/wingolog.org.pcap
+	./pflua-quickcheck properties/opt_eq_unopt savefiles/wingolog.org.pcap test-filters
+	./pflua-quickcheck properties/opt_eq_unopt savefiles/wingolog.org.pcap
 	make tcpdumpchecks
 
 tcpdumpchecks:
-	./test_tcpdump.sh || (echo "Skipped running properties that need tcpdump" && \
-                              exit 0)
-	./pflua-quickcheck --iterations=50 prop_pfluamath_eq_libpcap_math
+	if ./test_tcpdump.sh; then \
+	  ./pflua-quickcheck --iterations=50 properties/pflua_math_eq_libpcap_math; \
+	else \
+	  echo "Skipped running properties that need tcpdump"; \
+	fi
 
 get_savefile:
 	./get_savefile.sh
