Downloaded quickcheck savefile to tests/data
* .gitignore: New file.
* tests/pfquickcheck/Makefile: Update to use makefile rules to determine
  when to fetch the savefile.  Save the file to tests/data.

* tests/pfquickcheck/README.md: Update for the new savefile location.

* tests/pfquickcheck/get_savefile.sh: Removed.

--- a/tests/pfquickcheck/Makefile
+++ b/tests/pfquickcheck/Makefile
@@ -1,8 +1,14 @@
 check: quickcheck
 
-quickcheck: get_savefile
-	./pflua-quickcheck properties/opt_eq_unopt savefiles/wingolog.org.pcap test-filters
-	./pflua-quickcheck properties/opt_eq_unopt savefiles/wingolog.org.pcap
+TEST_SAVEFILE_URL='https://github.com/Igalia/pflua-test/blob/master/savefiles/wingolog.org.pcap?raw=true'
+TEST_SAVEFILE=../data/wingolog.pcap
+
+$(TEST_SAVEFILE):
+	wget --output-document $@ $(TEST_SAVEFILE_URL)
+
+quickcheck: $(TEST_SAVEFILE)
+	./pflua-quickcheck properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters
+	./pflua-quickcheck properties/opt_eq_unopt $(TEST_SAVEFILE)
 	make tcpdumpchecks
 
 tcpdumpchecks:
@@ -11,8 +17,5 @@ tcpdumpchecks:
 	else \
 	  echo "Skipped running properties that need tcpdump"; \
 	fi
-
-get_savefile:
-	./get_savefile.sh
 
 .SERIAL: all
