Use libpcap for math evaluation instead of shelling to tcpdump
* src/pf/bpf.lua: Convert the "k" field to unsigned before
  disassembling.

* tests/pfquickcheck/Makefile (quickcheck): Always run the math checks.
* tests/pfquickcheck/pflang_math.lua: Update to use libpcap directly
  instead of shelling out to tcpdump.
* tests/pfquickcheck/properties/pflua_math_eq_libpcap_math.lua: Adapt.

* tests/pfquickcheck/test_tcpdump.sh: Removed.

* doc/dst-host-192.68.1.1-and-greater-100.md:
* doc/net-127.0.0.0-8.md:
* doc/net-ipv6-0-mask-16.md:
* doc/net-ipv6-ee.cc.9954.0-mask-111.md:
* doc/src-host-192.68.1.1-and-less-100.md:
* doc/src-net-ffff.ffff.eeee.eeee.0.0.0.0-72.md:
* doc/src-net-ffff.ffff.eeee.eeee.1.0.0.0-82.md: Update disassembly.

--- a/tests/pfquickcheck/Makefile
+++ b/tests/pfquickcheck/Makefile
@@ -9,13 +9,6 @@ $(TEST_SAVEFILE):
 quickcheck: $(TEST_SAVEFILE)
 	./pflua-quickcheck properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters
 	./pflua-quickcheck properties/opt_eq_unopt $(TEST_SAVEFILE)
-	make tcpdumpchecks
-
-tcpdumpchecks:
-	if ./test_tcpdump.sh; then \
-	  ./pflua-quickcheck --iterations=50 properties/pflua_math_eq_libpcap_math; \
-	else \
-	  echo "Skipped running properties that need tcpdump"; \
-	fi
+	./pflua-quickcheck --iterations=50 properties/pflua_math_eq_libpcap_math
 
 .SERIAL: all
