"make check" runs test-matches regression test
* tests/test-matches: New file, refactored from bpf_pflua_ts.lua.

* tests/Makefile: Run test-matches.

* tests/data/empty.pcap.test:
* tests/data/telnet-cooked.pcap.test:
* tests/data/tftp_wrq.pcap.test:
* tests/data/v4.pcap.test: New files, which are test expectations.

* tests/regression/0001_plan.ts:
* tests/regression/Makefile:
* tests/regression/bpf_pflua_ts.lua: Removed.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,8 @@
-PATH := .:../deps/luajit/usr/local/bin:$(PATH)
+PATH := ../deps/luajit/usr/local/bin:$(PATH)
+
+all:
+	@true
 
 check:
-	#$(MAKE) -C regression # TODO: unbreak
+	./test-matches data
 	#$(MAKE) -C pfquickcheck # Fix NaN bug and luajit setup for travis-ci
