Some quickcheck directory refactors, and enable the math test
* tests/properties/fail.lua:
* tests/properties/opt_eq_unopt.lua:
* tests/properties/pflua_math_eq_libpcap_math.lua:
* tests/properties/trivial.lua: Move here, out of the subdirectory.

* tools/pflua-quickcheck: Move here, out of the subdirectory.

* tests/pfquickcheck/pfcompile.lua:
* tests/pfquickcheck/pflang_math.lua: Adapt module path to "require"
  quickcheck modules as "pfquickcheck.foo".

* tests/Makefile: Adapt, and enable the math test.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,20 @@
 PATH := ../deps/luajit/usr/local/bin:$(PATH)
+TEST_SAVEFILE_URL='https://github.com/Igalia/pflua-test/blob/master/savefiles/wingolog.org.pcap?raw=true'
+TEST_SAVEFILE=data/wingolog.pcap
+PFLUA_QUICKCHECK=../tools/pflua-quickcheck
 
 all:
 	@true
 
-check:
+check: quickcheck
 	./test-matches data
-	#$(MAKE) -C pfquickcheck # Fix NaN bug and luajit setup for travis-ci
+
+$(TEST_SAVEFILE):
+	wget --output-document $@ $(TEST_SAVEFILE_URL)
+
+quickcheck: $(TEST_SAVEFILE)
+	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters # Fix NaN bug
+	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) # Fix NaN bug
+	$(PFLUA_QUICKCHECK) properties/pflua_math_eq_libpcap_math
+
+.SERIAL: all
