Test quickcheck's ability to make reproducible randomness
* deps/luajit: Update, to fix miscompilation related to issue #77.

* src/pf/quickcheck.lua: Use utils.equals to check equality, and pp to
  print, by default.

* src/pf/utils.lua: Add ability to print arrays whose head is not a
  string, and a place to put a full table pretty-printer.

* tests/pfquickcheck/pflua_ir.lua: Don't mutate the database.  Shouldn't
  matter but avoiding mutation is good :)

* tests/properties/repeatable_randomization.lua: New test, that our
  randomized IR structures can be repeatably generated.

* tests/Makefile: Add new test.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,6 +15,7 @@ $(TEST_SAVEFILE):
 quickcheck: $(TEST_SAVEFILE)
 	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters # Fix NaN bug
 	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) # Fix NaN bug
+	$(PFLUA_QUICKCHECK) properties/repeatable_randomization
 	$(PFLUA_QUICKCHECK) properties/pflua_math_eq_libpcap_math
 
 .SERIAL: all
