--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,9 +13,9 @@ $(TEST_SAVEFILE):
 	wget --output-document $@ $(TEST_SAVEFILE_URL)
 
 quickcheck: $(TEST_SAVEFILE)
-	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters # Fix NaN bug
-	# $(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) # Fix NaN bug
 	$(PFLUA_QUICKCHECK) properties/repeatable_randomization
 	$(PFLUA_QUICKCHECK) properties/pflua_math_eq_libpcap_math
+	$(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE)
+	$(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters
 
 .SERIAL: all
