Added a regression test for bug83, int/float mult
https://github.com/Igalia/pflua/issues/83
Pflua: large multiplications use floats, leading to different results

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -26,7 +26,10 @@ pipeline_diverge: $(TEST_SAVEFILE)
 	cd regression && ./multi_octet.sh
 	cd regression && ./portrange_bigger_first.sh
 
-regression: pipeline_diverge
+math_regression:
+	cd regression && ./integer_multiplication.sh
+
+regression: pipeline_diverge math_regression
 	echo "All regression tests passed"
 
 .SERIAL: all
