Added a property-based test for ' or '
The purpose of this test is to decrease the odds of missing any further
bugs which appear in expressions like "icmp or arp".

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -24,6 +24,7 @@ quickcheck: $(TEST_SAVEFILE)
 	$(PFLUA_QUICKCHECK) properties/pflua_math_eq_libpcap_math
 	$(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE)
 	$(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters
+	$(PFLUA_QUICKCHECK) properties/pipecmp_proto_or_proto $(TEST_SAVEFILE)
 
 regression: pflang_regression_tests
 
