Added a regression test for bug 126
https://github.com/Igalia/pflua/issues/126

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,6 +3,7 @@ include $(TOP_SRCDIR)/common.mk
 
 # Tests where the pure-lua pipeline and/or bpf-lua pipeline diverged from libpcap.
 PFLANG_REGRESSION_TESTS := $(wildcard pflang-reg/*)
+IR_REGRESSION_TESTS := $(wildcard ir-reg/*.sh)
 
 TEST_SAVEFILE_URL='https://github.com/Igalia/pflua-test/blob/master/savefiles/wingolog.org.pcap?raw=true'
 TEST_SAVEFILE=data/wingolog.pcap
@@ -26,7 +27,13 @@ quickcheck: $(TEST_SAVEFILE)
 	$(PFLUA_QUICKCHECK) properties/opt_eq_unopt $(TEST_SAVEFILE) test-filters
 	$(PFLUA_QUICKCHECK) properties/pipecmp_proto_or_proto $(TEST_SAVEFILE)
 
-regression: pflang_regression_tests
+regression: pflang_regression_tests ir_regression_tests
+
+ir_regression_tests: $(TEST_SAVEFILE) $(IR_REGRESSION_TESTS)
+
+.PHONY: $(IR_REGRESSION_TESTS)
+$(IR_REGRESSION_TESTS):
+	./$@
 
 pflang_regression_tests: $(TEST_SAVEFILE) $(PFLANG_REGRESSION_TESTS)
 
