Add address-of pflang extension
* doc/Makefile (tcp-address.md):
* doc/tcp-address.md: New file.

* doc/pflang.md: Link to extensions.md.  Fix description of what happens
  on ip[0] for a non-IP packet.

* src/pf/parse.lua (allow_address_of): New exported flag, on by
  default.
  (parse_addressable, parse_primary_arithmetic): Add addressable
  parsing.

* tools/dump-markdown: Allow libpcap compilation to fail.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -43,7 +43,8 @@ EXAMPLES = \
 	packet-access-igrp.md \
 	packet-access-vrrp.md \
 	packet-access-sctp.md \
-	icmp6-or-ip.md
+	icmp6-or-ip.md \
+	tcp-address.md
 
 PFLUA = \
 	../src/pf.lua \
@@ -186,3 +187,6 @@ packet-access-sctp.md: $(PFLUA)
 
 icmp6-or-ip.md: $(PFLUA)
 	../tools/dump-markdown "icmp6 or ip" > $@.tmp && mv $@.tmp $@
+
+tcp-address.md: $(PFLUA)
+	../tools/dump-markdown "ether[&tcp[0]] = tcp[0]" > $@.tmp && mv $@.tmp $@
