--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,7 +12,9 @@ PFLUA_QUICKCHECK=$(ABS_TOP_SRCDIR)/tools/pflua-quickcheck
 all:
 	@true
 
-check: regression quickcheck
+check:
+	$(MAKE) $(TEST_SAVEFILE)
+	$(MAKE) regression quickcheck
 	./test-matches data
 	# Make sure PF_VERBOSE isn't causing crashes
 	PF_VERBOSE=1 $(ABS_TOP_SRCDIR)/tools/pflua-compile "ip" >/dev/null 2>&1
@@ -20,7 +22,8 @@ check: regression quickcheck
 $(TEST_SAVEFILE):
 	wget --output-document $@ $(TEST_SAVEFILE_URL)
 
-quickcheck: $(TEST_SAVEFILE)
+quickcheck:
+	$(MAKE) $(TEST_SAVEFILE)
 	$(PFLUA_QUICKCHECK) properties/repeatable_randomization
 	$(PFLUA_QUICKCHECK) properties/pflua_math_eq_libpcap_math
 	$(PFLUA_QUICKCHECK) --iterations=100 properties/pflua_pipelines_match $(TEST_SAVEFILE)
@@ -30,13 +33,17 @@ quickcheck: $(TEST_SAVEFILE)
 
 regression: pflang_regression_tests ir_regression_tests
 
-ir_regression_tests: $(TEST_SAVEFILE) $(IR_REGRESSION_TESTS)
+ir_regression_tests:
+	$(MAKE) $(TEST_SAVEFILE)
+	$(MAKE) $(IR_REGRESSION_TESTS)
 
 .PHONY: $(IR_REGRESSION_TESTS)
 $(IR_REGRESSION_TESTS):
 	./$@
 
-pflang_regression_tests: $(TEST_SAVEFILE) $(PFLANG_REGRESSION_TESTS)
+pflang_regression_tests:
+	$(MAKE) $(TEST_SAVEFILE)
+	$(MAKE) $(PFLANG_REGRESSION_TESTS)
 
 .PHONY: $(PFLANG_REGRESSION_TESTS)
 $(PFLANG_REGRESSION_TESTS):
